--- a/css/style.css
+++ b/css/style.css
@@ -25,6 +25,36 @@ p{
     border: 3px solid #fff;
     transition: 0.5s;
 }
+
+.btn.btn-black:hover{
+    color: #000;
+    border-color: #000;
+}
+
+.sub-titulo{
+    font-weight: bold;
+    font-size: 24px;
+    line-height: 30px;
+    letter-spacing: .1em;
+    color: black;
+    text-transform: uppercase;
+    text-align: center;
+   
+}
+
+.sub-titulo:after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #000;
+    margin: 15px auto 10px auto;
+    margin-bottom: 40px;
+
+}
+
+
+
 /* header */
 .header{
     position: fixed;
@@ -32,6 +62,7 @@ p{
     width: 100%;
     background-color: #fec63e;
     padding: 15px 0;
+    z-index: 10;
 
 }
 
@@ -91,16 +122,7 @@ p{
     font-style: italic;
 }
 
-.quote-externo p:before{
-    content: "";
-    display: block;
-    width: 60px;
-    height: 3px;
-    background-color: #fff;
-    margin: 15px auto 10px auto;
-
-}
-.quote-externo p:after{
+.quote-externo p:before, .quote-externo p:after{
     content: "";
     display: block;
     width: 60px;
@@ -119,8 +141,52 @@ p{
 }
 
 
+/*produtos */
 
+.produtos{
+    padding: 60px 0;
+}
 
+.produtos-lista  li{
+    background: #fec63e;
+    text-align: center;
 
+}
+.produtos-lista  li h3{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    margin-top: 10px;
+    
 
+}
 
+.produtos-lista li p{
+    padding: 10px 20px 20px 20px;
+}
+
+.produtos-icone{
+    background: #000;
+    padding: 20px;
+    
+}
+
+.produtos-lista  li h3:after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #000;
+    margin: 2px auto 10px auto;}
+
+.call{
+    clear: both;
+    text-align: center;
+    padding-top: 20px;
+}
+
+.call p{
+    margin-bottom: 15px;
+}
