desenvolvimento e conclusão section sobre-home

--- a/css/style.css
+++ b/css/style.css
@@ -8,6 +8,10 @@ p{
     line-height: 20px;
 }
 
+img {
+    display: block;
+}
+
 .btn{
     border: 3px solid #fec63e;
     padding: 10px 30px;
@@ -42,6 +46,16 @@ p{
    
 }
 
+.sub-titulo:before{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #000;
+    margin: 10px auto 10px auto;
+    margin-bottom: 20px;
+
+}
 .sub-titulo:after{
     content: "";
     display: block;
@@ -52,6 +66,7 @@ p{
     margin-bottom: 40px;
 
 }
+
 
 /* header */
 .header{
@@ -98,7 +113,7 @@ p{
     height: 380px;
     background: url("../img/bg.jpg") no-repeat center;
     background-size: cover; /*ocupa a parte inteira*/
-    margin-top: 96px;
+    margin-top: 92px;
     text-align: center;
     padding-top: 80px;
 }
@@ -157,9 +172,7 @@ p{
     text-transform: uppercase;
     letter-spacing: .1em;
     margin-top: 10px;
-    
-
-}
+    }
 
 .produtos-lista li p{
     padding: 10px 20px 20px 20px;
@@ -229,3 +242,49 @@ p{
     color: #fff;
 }
 
+/*qualidade*/
+.subbtitulo{
+    margin-top: 50px;
+}
+
+.qualidade{
+    padding: 60px o;
+}
+
+.qualidade:after{
+    content: "";
+    width: 634px;
+    height: 83px;
+    display: block;
+    background: url("/img/linhas.svg") no-repeat center;
+    position: absolute;
+    top: 228px;
+    right: 162px;
+    z-index: -1;
+}
+.qualidade img{
+    margin: 0 auto
+}
+
+.qualidade-itens li{
+    text-align: center;
+    padding: 0 40px;
+}
+
+.qualidade-itens li h3{
+    font-weight: bold;
+    font-size: 18px;
+    line-height: 25px;
+    text-transform: uppercase;
+    letter-spacing: .1em;
+    margin-top: 30px;
+}
+
+.qualidade-itens li h3:after{
+    content: "";
+    display: block;
+    width: 60px;
+    height: 3px;
+    background-color: #000;
+    margin: 2px auto 10px auto;
+}
